# flappybird

./: .gitignore  Cargo.toml  DISCLAIMER  LICENSE.md  README.md
.cargo/: config.toml
.github/: FUNDING.yml
src/: main.rs
src/player/: animation.rs  controller.rs  mod.rs
src/ui/: mod.rs  score.rs  settings.rs  taptap.rs  titlescreen.rs
src/world/: ground.rs  mod.rs  pipes.rs  sky.rs
