cargo-features = ["profile-rustflags"]
[package]
name = "flappybird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.1"
bevy_easings = "0.14.0"
bevy_embedded_assets = "0.11.0"
bevy_kira_audio = "0.20.0"
bevy_rapier2d = { version = "0.27.0", features = ["debug-render-2d"] }
chrono = "0.4.38"
rand = "0.8.5"
rust-embed = "8.5.0"
strum = { version = "0.26.3", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1